# sentinel

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/: main.py  serve.py
backend/app/: __init__.py  config.py  logging.py  main.py  v3_import.py
backend/app/api/: _responses.py  dav.py  deps.py  errors.py
backend/app/core/: README.md  __init__.py  _docx_helpers.py  arabic_rtl.py  book_table.py  book_template_retokenize.py  book_text.py  classifications.py  constants.py  crypto.py  dateutils.py  docx_engine.py  docx_render.py  duty.py  employee_completeness.py  export_naming.py  form_policy.py  leave_calc.py  leave_lifecycle.py  manager_override.py  (+16 more)
backend/scripts/: add_ref_line_to_general_book_template.py  backfill_book_search.py  backfill_passport_no.py  build_base_templates.py  build_report_template.py  dedupe_leaves.py  import_book_templates.py  make_classified_placeholder.py  measure_general_book_pages.py  passport_sample_report.py  update_employees_2026_07.py  word_dav_proof.py
backend/templates/: GSSG-GS_300-003_Acknowledgment_Form_.docx  GSSG-GS_300-003_General_Book.docx  GSSG-GS_300-004_Report.docx  GSSG-GS_301-001_Classified_Standard.docx  GSSG-HR 300-014_HR Request Form.docx  GSSG-HR_300-003_Leave_Application_Form.docx  GSSG-HR_300-004_Passport_Release_Form.docx  GSSG-HR_300-004b_Passport_Release_List.docx  GSSG-HR_300-009_Employee_Clearance_Form_.docx  GSSG-HR_300-010_Employee_Resignation_Form_.docx  GSSG-HR_300-013_Salary_Deduction_Form_.docx  GSSG-HR_300-016_Duty_Resumption_Form.docx  GSSG-HR_300-024_Salary_Transfer_Request_Form.docx  GSSG-HR_301-003_Leave_Application_Form.docx  GSSG-HR_301-004_Leave_permit_Form.docx  GSSG-HR_301-005_Administrative_leave_Form.docx  GSSG-HR_301-010_Employee_Resignation_Form_.docx  GSSG-NAT_300-004_Material_Request_Form__MRF__.docx  GSSG-NAT_300-004_Violation_Form.docx  GSSG-NAT_301-004_Warning_Form.docx  _fields.json
backend/tests/: conftest.py  test_admin_notify.py  test_announce_book_pdf.py  test_announce_direct.py  test_announce_service_send.py  test_announcements_api.py  test_announcements_gateway.py  test_arabic_rtl_cell_structure.py  test_arabic_rtl_comments.py  test_arabic_rtl_merged_cells.py  test_arabic_rtl_row_props.py  test_arabic_rtl_table_spacing.py  test_arabic_rtl_table_width.py  test_arabic_rtl_whitespace.py  test_arabic_rtl_word_paste.py  test_backfill_outbound_messages.py  test_backfill_passport_no.py  test_book_attachment_manage.py  test_book_companion_docs.py  test_book_names_batch.py  test_book_schemas_m4.py  test_book_table_detect.py  test_book_table_normalize.py  test_book_table_retokenize_integration.py  test_book_template_kind.py  test_book_template_retokenize.py  test_book_template_routes_m4.py  test_book_template_service.py  test_book_template_table_schema.py  test_book_templates_rename.py  test_book_text.py  test_books_fts_migration.py  test_books_search.py  test_books_sms.py  test_capabilities_api_description.py  test_classifications.py  test_clearance_pickers.py  test_config_openwa.py  test_dashboard_layout_read.py  test_dav.py  (+111 more)
deploy/: Caddyfile  PHASE5-RUNBOOK.md  SMS-SETUP.md  WHATSAPP-SETUP.md  configure-sms.ps1  configure-whatsapp.ps1  register-whatsapp-templates.ps1  whatsapp-templates-status.ps1
deploy/guides/: install-cert-phone.html  install-cert-windows.html
deploy/openwa/: README.md  docker-compose.yml  install-autostart-task.ps1  run-waha.ps1  waha-autostart.ps1
docs/: app-audit-2026-07-02.html  classified-books-edit-in-word-mockup.html  general-book-pageview-mockup.html  openwa-deferred-ux-mockup.html  permit-general-book-mockup.html  preview-sms-toggle-mockup.html  pull-to-refresh-desktop-mockup.html  pull-to-refresh-mockup.html  report-template-form-mockup.html  report-template-qa-2026-07-23.md  sms-services-templates-preview.html
docs/superpowers/: ocr-server-setup.md
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/e2e/: refresh.spec.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx
scripts/: backup-db.ps1  build.ps1  cleanup_correspondence_log_rows.py  dev.ps1  dump_openapi.py  export-caddy-ca.ps1  firewall-lan.ps1  install-backup-task.ps1  install-caddy-service.ps1  install-service.ps1  make_pwa_icons.py  mng.ps1  secure_key_acls.ps1
(+775 files in other folders)
